<resources>
    <string name="app_name">FootBall_Winner_Counter</string>
    <string name="tv1">Team A</string>
    <string name="tv2">0</string>
    <string name="bt3">+3 Points</string>
    <string name="bt2">+2 Points</string>
    <string name="bt1">Free Throw</string>

    <string name="tvb1">Team B</string>
    <string name="tvb2">0</string>
    <string name="btbb3">+3 Points</string>
    <string name="btbb2">+2 Points</string>
    <string name="btbb1">Free Throw</string>

    <string name="reb">Reset</string>
</resources>