<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv1"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv2"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"/>

        <Button
            android:id="@+id/bt3"
            android:text="@string/bt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/bt2"
            android:text="@string/bt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/bt1"
            android:text="@string/bt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvb1"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/tvb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvb2"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"/>

        <Button
            android:id="@+id/btb3"
            android:text="@string/btbb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btb2"
            android:text="@string/btbb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btb1"
            android:text="@string/btbb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>
    </LinearLayout>

</LinearLayout>
    <Button
        android:id="@+id/rebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reb"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>